<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/browseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/Browse"
        android:textSize="70sp" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/browseButton"
        android:layout_alignRight="@+id/browseButton"
        android:layout_below="@+id/browseButton"
        android:text="@string/Post"
        android:textSize="70sp" />

    <Button
        android:id="@+id/viewUsersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/postButton"
        android:layout_alignRight="@+id/postButton"
        android:layout_below="@+id/postButton"
        android:text="@string/viewUsers"
        android:textSize="70sp" />

</RelativeLayout>