<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@drawable/item_entry_bg"
    android:orientation="horizontal"
    android:padding="5dp" >
	
     <TextView
        android:id="@+id/userNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="12sp"
        android:text="Username" />
	    
	 <Button
	    android:id="@+id/blockUserButton"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerVertical="true"
	    android:textSize="10sp"
	    android:layout_toLeftOf="@+id/removeUserButton"
	    android:text="@string/blockUserText" />

	  <Button
	      android:id="@+id/removeUserButton"
	      style="?android:attr/buttonStyleSmall"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_alignBottom="@+id/blockUserButton"
	      android:layout_alignParentRight="true"
	      android:layout_alignTop="@+id/blockUserButton"
	      android:text="@string/removeUserText"
	      android:textSize="10sp" />

	  <Button
	      android:id="@+id/promoteUserButton"
	      style="?android:attr/buttonStyleSmall"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_alignBaseline="@+id/blockUserButton"
	      android:layout_alignBottom="@+id/blockUserButton"
	      android:layout_toLeftOf="@+id/blockUserButton"
	      android:text="@string/promoteUserText"
	      android:textSize="10sp" />
    
</RelativeLayout>